<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moveez.MovieDetailsActivity" >

    <ScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:text="placeholder" />

            <ImageView
                android:id="@+id/iv_details_poster"
                style="@style/DetailsTVs"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/poster_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_title" />

            <TextView
                android:id="@+id/tv_details_releasedate"
                style="@style/DetailsTVs"
                android:layout_marginTop="16dp"
                android:text="@string/placeholder_releasedate"
                android:textSize="32sp"
                app:layout_constraintStart_toEndOf="@id/iv_details_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_title" />

            <TextView
                android:id="@+id/tv_details_runtime"
                style="@style/DetailsTVs"
                android:text="@string/placeholder_runtime"
                android:textSize="24sp"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/iv_details_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_releasedate" />

            <TextView
                android:id="@+id/tv_details_rating"
                style="@style/DetailsTVs"
                app:layout_constraintStart_toEndOf="@id/iv_details_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_runtime"
                tools:text="@string/placeholder_rating" />

            <Button
                android:id="@+id/button_favorite"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryLight"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/btn_mark_favorite"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/iv_details_poster"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_rating" />

            <TextView
                android:id="@+id/tv_details_description"
                style="@style/DetailsTVs"
                android:layout_marginTop="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_details_poster"
                tools:text="@string/poster_description" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
